--- a/s3.ipynb
+++ b/s3.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# just for testing getting s3 CRUD setup\n",
     "import boto3\n",
     "import uuid\n",
     "\n",
