updating data files

--- a/ian_starting_basic_analysis.ipynb
+++ b/ian_starting_basic_analysis.ipynb
@@ -151,11 +151,8 @@
     "\n",
     "# drop country column (we don't need it in aggregate) and get avg of all other columns\n",
     "df_2015_avg = pd.DataFrame(df_2015.drop(['Country'], axis=1).groupby(['Region'], as_index=False))#.mean(axis=1)\n",
-    "print(df_2015_avg)\n",
     "df_2016_avg = pd.DataFrame(df_2016.drop(['Country'], axis=1).groupby(['Region'], as_index=False))#.mean(axis=1)\n",
-    "print(df_2016_avg)\n",
-    "df_2020_avg = pd.DataFrame(df_2020.drop(['Country name'], axis=1).groupby(['Regional indicator'], as_index=False))#.mean(axis=1)\n",
-    "print(df_2020_avg)\n"
+    "df_2020_avg = pd.DataFrame(df_2020.drop(['Country name'], axis=1).groupby(['Regional indicator'], as_index=False))#.mean(axis=1)\n"
    ]
   },
   {
