--- a/ian_starting_basic_analysis.ipynb
+++ b/ian_starting_basic_analysis.ipynb
@@ -3,12 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "import pandas as pd"
+   ],
    "outputs": [
     {
+     "output_type": "error",
      "ename": "ModuleNotFoundError",
      "evalue": "No module named 'pandas'",
-     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
@@ -17,34 +19,31 @@
      ]
     }
    ],
-   "source": [
-    "import pandas as pd"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Read in all the data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "df_2015 = pd.read_csv('data_files/2015.csv')\n",
-    "df_2016 = pd.read_csv('data_files/2016.csv')\n",
-    "df_2017 = pd.read_csv('data_files/2017.csv')\n",
-    "df_2018 = pd.read_csv('data_files/2018.csv')\n",
-    "df_2019 = pd.read_csv('data_files/2019.csv')\n",
+    "df_2015 = pd.read_csv('data_files/2015.csv')\r\n",
+    "df_2016 = pd.read_csv('data_files/2016.csv')\r\n",
+    "df_2017 = pd.read_csv('data_files/2017.csv')\r\n",
+    "df_2018 = pd.read_csv('data_files/2018.csv')\r\n",
+    "df_2019 = pd.read_csv('data_files/2019.csv')\r\n",
     "df_2020 = pd.read_csv('data_files/2020.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "First I want to aggregate by the region, to look at averages of stats over a region.  This will be benificial by giving a more \"bird's eye\" view of data.  It will also be benificial is seeing how countries do compared to the  averages of their regions.\n",
     "\n",
@@ -59,16 +58,28 @@
     "what variables predict what \n",
     "\n",
     "Not all years have a region column so we need to map this over."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "source": [
+    "# first we need mapping DF\n",
+    "# 2015, 2016, and 2020 have a country column region column, they need this information aggregated\n",
+    "# 2017 has no regional information and needs mapping and aggrigation\n",
+    "# 2018 and 2019 already have aggregated regional information  \n",
+    "# - it is unclear how this was done, need to read how and/or map countries and aggregate manually for consistency\n",
+    "\n",
+    "# drop country column (we don't need it in aggregate) and get avg of all other columns\n",
+    "df_2015_avg = pd.DataFrame(df_2015.drop(['Country'], axis=1).groupby(['Region'], as_index=False))#.mean(axis=1)\n",
+    "df_2016_avg = pd.DataFrame(df_2016.drop(['Country'], axis=1).groupby(['Region'], as_index=False))#.mean(axis=1)\n",
+    "df_2020_avg = pd.DataFrame(df_2020.drop(['Country name'], axis=1).groupby(['Regional indicator'], as_index=False))#.mean(axis=1)\n"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "                                 0  \\\n",
       "0        Australia and New Zealand   \n",
@@ -142,26 +153,15 @@
      ]
     }
    ],
-   "source": [
-    "# first we need mapping DF\n",
-    "# 2015, 2016, and 2020 have a country column region column, they need this information aggregated\n",
-    "# 2017 has no regional information and needs mapping and aggrigation\n",
-    "# 2018 and 2019 already have aggregated regional information  \n",
-    "# - it is unclear how this was done, need to read how and/or map countries and aggregate manually for consistency\n",
-    "\n",
-    "# drop country column (we don't need it in aggregate) and get avg of all other columns\n",
-    "df_2015_avg = pd.DataFrame(df_2015.drop(['Country'], axis=1).groupby(['Region'], as_index=False))#.mean(axis=1)\n",
-    "df_2016_avg = pd.DataFrame(df_2016.drop(['Country'], axis=1).groupby(['Region'], as_index=False))#.mean(axis=1)\n",
-    "df_2020_avg = pd.DataFrame(df_2020.drop(['Country name'], axis=1).groupby(['Regional indicator'], as_index=False))#.mean(axis=1)\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "user name: tiffanyz\n",
     "passsword: v-RdD4CSbs@dw@d"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
